# CodexWork-HumanBreak

./: .gitignore  CONTRIBUTING.md  README.md  build_macos_app.py  install.py  pyproject.toml
.github/workflows/: ci.yml
codex_rest/: __init__.py  cli.py  client.py  config.py  install.py  paths.py  server.py  state.py
codex_rest/web/: app.js  index.html  styles.css
macos_app/: CodexRestApp.m
tests/: test_config.py  test_install.py  test_server.py  test_state.py
