[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-work-human-break"
version = "1.0.0"
description = "A macOS rest window and music companion for Codex CLI and Codex App"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "senbaph08" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: MacOS X",
  "Intended Audience :: Developers",
  "Operating System :: MacOS :: MacOS X",
  "Programming Language :: Python :: 3",
  "Programming Language :: Objective C",
  "Topic :: Software Development :: User Interfaces",
]

[project.scripts]
codex-rest = "codex_rest.cli:main"

[tool.setuptools]
packages = ["codex_rest"]
include-package-data = true

[tool.setuptools.package-data]
codex_rest = ["web/*.html", "web/*.css", "web/*.js"]
